define encoding for surefire